form desgin improved

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="form_outer">
         <div class="form-title">
 
-            <span class="form-title"> Name and address </span>
+            <span class="form-title"> Name and Address </span>
         </div>
         <form action="">
           <div class="form-fields">
