--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div class="submit-btn">
             <button type="submit">Save</button>
-            <button class="cancel-btn" type="">cancel</button>
+            <button class="cancel-btn" type="reset">cancel</button>
           </div>
         </form>
       </div>
